[gd_scene load_steps=5 format=3 uid="uid://bixccnx7d380w"]

[ext_resource type="Script" path="res://Scripts/Menu_Inicial.gd" id="1_4gnl2"]
[ext_resource type="Texture2D" uid="uid://jyd88e6i8kp" path="res://Assets/Default_Crie_uma_imagem_em_pixel_art_para_o_fundo_do_menu_de_u_3.jpg" id="2_wobdd"]
[ext_resource type="FontFile" uid="uid://cus5tv4wylsi3" path="res://Assets/Valentine Cute.ttf" id="3_7j03c"]

[sub_resource type="Theme" id="Theme_yv1ki"]
Button/font_sizes/font_size = 16
Button/fonts/font = ExtResource("3_7j03c")

[node name="Menu_Inicial" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4gnl2")

[node name="DefaultCrieUmaImagemEmPixelArtParaOFundoDoMenuDeU3" type="Sprite2D" parent="."]
position = Vector2(479.5, 268.5)
scale = Vector2(0.701023, 0.714844)
texture = ExtResource("2_wobdd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0.541176)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 25.0
offset_right = 67.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = SubResource("Theme_yv1ki")

[node name="Start_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.698039, 0, 0.105882, 1)
theme_override_colors/font_focus_color = Color(1, 0.14902, 0.113725, 1)
theme_override_colors/font_disabled_color = Color(1, 0.14902, 0.113725, 1)
theme_override_font_sizes/font_size = 17
text = "Start Game"

[node name="Tutorial_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.698039, 0, 0.105882, 1)
theme_override_colors/font_focus_color = Color(1, 0.14902, 0.113725, 1)
theme_override_colors/font_disabled_color = Color(1, 0.14902, 0.113725, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "Tutorial"

[node name="Exit_Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.698039, 0, 0.105882, 1)
theme_override_colors/font_focus_color = Color(1, 0.14902, 0.113725, 1)
theme_override_colors/font_disabled_color = Color(1, 0.14902, 0.113725, 1)
theme_override_font_sizes/font_size = 17
text = "Exit Game"

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -157.0
offset_right = 261.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_7j03c")
theme_override_font_sizes/font_size = 36
text = "DATE  AGAINST   TIME"

[node name="Label2" type="Label" parent="."]
self_modulate = Color(0.894922, 0.894922, 0.894922, 1)
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -199.0
offset_top = -54.0
offset_right = 199.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_7j03c")
theme_override_font_sizes/font_size = 13
text = "By  Felipe Gabriel  Marques and Enzo Melo Araujo"
